# example-fapolicyd-noshell

./: CMakeLists.txt  README.md  boo.h  boo.service  fapolicyd.rules  lib.cpp  main.cpp
.github/workflows/: rpm.yml
